# zapiska

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  SPEC.md  docker-compose-example.yml
.github/workflows/: ci.yml
.skills/build-frontend/: SKILL.md
.skills/configure-turnstile/: SKILL.md
.skills/setup-server/: SKILL.md
docs/: ai-agent-setup.md  api.md  architecture.md  deployment.md  development.md  getting-started.md  moderation-engine.md  security.md
embed/: README.md  admin.html  comments.js
migrations/: schema.sql
src/: avatar.rs  config.rs  error.rs  github.rs  ip_hash.rs  lib.rs  main.rs  mf2.rs  openapi.rs  sanitize.rs  ssrf.rs  state.rs  turnstile.rs  validate.rs  worker.rs
src/db/: mod.rs  pool.rs  repo.rs
src/db/repo/: comments.rs  github_profiles.rs  mod.rs  urls.rs  webmentions.rs
src/http/: admin.rs  comment_post.rs  comments_read.rs  layers.rs  mod.rs  reqwest_client.rs  shutdown.rs  test_support.rs  webmention_post.rs
tests/: e2e.rs
