[package]
name = "zapiska"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "zapiska — a note, a comment, a webmention"
license = "MIT"

[dependencies]
ammonia = "4.1.3"
async-trait = "0.1"
axum = "0.8.9"
governor = "0.8"
ipnet = "2.12"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = "0.39"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
subtle = "2"
dotenvy = "0.15"
thiserror = "2"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", default-features = false, features = ["cors", "limit", "trace"] }
tower_governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2.5.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
